syntax = "proto3";

package configureprovider;

message CreateKeyRequest {}
message CreateKeyResponse {
    bytes status = 1;
    bytes uuid = 2;
}

message GetKeyRequest {
    bytes uuid = 1;
}
message GetKeyResponse {
    bytes status = 1;
    bytes key = 2;
}

message DeleteKeyRequest {
    bytes uuid = 1;
}
message DeleteKeyResponse {
    bytes status = 1;
}

message SetOpaPolicyRequest {
    bytes name = 1;
    bytes content = 2;
}
message SetOpaPolicyResponse {
    bytes status = 1;
}

message SetOpaReferenceRequest {
    bytes name = 1;
    bytes content = 2;
}
message SetOpaReferenceResponse {
    bytes status = 1;
}

message ExportOpaPolicyRequest {
    bytes name = 1;
}
message ExportOpaPolicyResponse {
    bytes status = 1;
    bytes content = 2;
}

message ExportOpaReferenceRequest {
    bytes name = 1;
}
message ExportOpaReferenceResponse {
    bytes status = 1;
    bytes content = 2;
}

message TestOpaRequest {
    bytes policyname = 1;
    bytes policycontent = 2;
    bool policylocal = 3;
    bytes referencename = 4;
    bytes referencecontent = 5;
    bool referencelocal = 6;
    bytes input = 7;
}
message TestOpaResponse {
    bytes status = 1;
}

service ConfigureProviderService {
    rpc CreateKey(CreateKeyRequest) returns (CreateKeyResponse) {};
    rpc GetKey(GetKeyRequest) returns (GetKeyResponse) {};
    rpc DeleteKey(DeleteKeyRequest) returns (DeleteKeyResponse) {};
    rpc SetOpaPolicy(SetOpaPolicyRequest) returns (SetOpaPolicyResponse) {};
    rpc exportOpaPolicy(ExportOpaPolicyRequest) returns (ExportOpaPolicyResponse) {};
    rpc setOpaReference(SetOpaReferenceRequest) returns (SetOpaReferenceResponse) {};
    rpc exportOpaReference(ExportOpaReferenceRequest) returns (ExportOpaReferenceResponse) {};
    rpc TestOpa(TestOpaRequest) returns (TestOpaResponse) {};
}
